@@ -127,5 +127,7 @@ HORAS TRABALHADAS: 4h
 - Ajustes no cadastro de CMS
 - Bugfixes
 - Cadastro de CMS concluido
+- Listagem de CMS no Dashboard
+- Rascunho de layout do dashboard
 
 HORAS TRABALHADAS: 4h
